==> MikroElektronika/mikrosdk_v2/targets/arm/mikroe/renesas/src/tim/implementation_2/hal_ll_tim.c <==
#include "hal_ll_gpio.h"
#include "hal_ll_tim.h"
#include "hal_ll_tim_pin_map.h"
#include "hal_ll_mstpcr.h"
#include "mcu.h"
#define HAL_LL_TIM_TOM0_MASTER_CHANNEL (0)
#define HAL_LL_TIM_TT0_STOP_MASTER_CHANNEL (1 << 0)
#define HAL_LL_TIM_TS0_START_MASTER_CHANNEL (1 << 0)
#define HAL_LL_TIM_TMR0_SELECT_MASTER (1 << 11)
#define HAL_LL_TIM_TMR0_OPIRQ (1 << 0)
#define HAL_LL_TIM_TMR0_STS_INT (0x4 << 8)
#define HAL_LL_TIM_TMR0_MD_ONECOUNT (0x4 << 1)
#define HAL_LL_TIM_AF_CONFIG (GPIO_CFG_DIGITAL_OUTPUT | GPIO_CFG_PORT_PULL_UP_ENABLE)
#define hal_ll_tim_get_base_struct(_handle) ((hal_ll_tim_base_handle_t *)_handle)
#define hal_ll_tim_get_module_state_address ((hal_ll_tim_handle_register_t *)*handle)
#define hal_ll_tim_get_handle ( hal_ll_tim_handle_register_t * )hal_ll_tim_get_module_state_address->hal_ll_tim_handle
#define hal_ll_tim_get_base_from_hal_handle ((hal_ll_tim_hw_specifics_map_t *)((hal_ll_tim_handle_register_t *)\
                                            (((hal_ll_tim_handle_register_t *)(handle))->hal_ll_tim_handle))->hal_ll_tim_handle)->base

hal_ll_err_t hal_ll_tim_register_handle( hal_ll_pin_name_t pin, hal_ll_tim_handle_register_t *handle_map,
                                                                uint8_t *hal_module_id ) {

    uint8_t index;
    uint16_t pin_check_result;

    if ( ( pin_check_result = hal_ll_tim_check_pin( pin, &index, handle_map ) ) == HAL_LL_PIN_NC ) {
        return HAL_LL_TIM_WRONG_PIN;
    }

    if ( hal_ll_tim_hw_specifics_map[ pin_check_result].config.pin != pin ) {
        hal_ll_tim_alternate_functions_set_state( &hal_ll_tim_hw_specifics_map[ pin_check_result ], false );

        hal_ll_tim_map_pin( pin_check_result, index );

        hal_ll_tim_alternate_functions_set_state( &hal_ll_tim_hw_specifics_map[ pin_check_result ], true );

        handle_map[ pin_check_result ].init_ll_state = false;

        hal_ll_module_state[ pin_check_result ].init_ll_state = false;
    }

    *hal_module_id = pin_check_result;

    hal_ll_module_state[ pin_check_result ].hal_ll_tim_handle =
                        ( handle_t * )&hal_ll_tim_hw_specifics_map[ pin_check_result ].base;

    handle_map[ pin_check_result ].hal_ll_tim_handle =
                        ( handle_t *)&hal_ll_module_state[ pin_check_result ].hal_ll_tim_handle;

    return HAL_LL_TIM_SUCCESS;
}

uint32_t hal_ll_tim_set_freq( handle_t *handle, uint32_t freq_hz ) {
    uint16_t local_freq = 0;
    low_level_handle = hal_ll_tim_get_handle;
    hal_ll_tim_hw_specifics_map_local = hal_ll_get_specifics( hal_ll_tim_get_module_state_address );
    hal_ll_tim_base_handle_t *hal_ll_hw_reg = hal_ll_tim_get_base_struct( hal_ll_tim_hw_specifics_map_local->base );
    uint32_t period;

    low_level_handle->init_ll_state = false;

    hal_ll_tim_hw_specifics_map_local->freq_hz = freq_hz;

    period = hal_ll_tim_init(hal_ll_tim_hw_specifics_map_local);

    low_level_handle->init_ll_state = true;

    // Memorize information about the max period available (PWM duty cycle is dependant of this information).
    return ( hal_ll_tim_hw_specifics_map_local->max_period = period );
}

hal_ll_err_t hal_ll_tim_set_duty( handle_t *handle, float duty_ratio ) {
    low_level_handle = hal_ll_tim_get_handle;
    hal_ll_tim_hw_specifics_map_local = hal_ll_get_specifics( hal_ll_tim_get_module_state_address );
    hal_ll_tim_base_handle_t *hal_ll_hw_reg = hal_ll_tim_get_base_struct( hal_ll_tim_hw_specifics_map_local->base );

    float duty_float = (float)duty_ratio * 100;
    uint16_t duty_int = (uint16_t) duty_float;

    uint16_t mask_tt0 = HAL_LL_TIM_TT0_STOP_MASTER_CHANNEL |
                        ( 1 << hal_ll_tim_hw_specifics_map_local->config.channel );
    write_reg( &hal_ll_hw_reg->tt0, mask_tt0 );

    uint16_t tdr_slave = (uint16_t)((uint32_t)duty_int * (tdr_master + 1) / 100u );

    write_reg( &hal_ll_hw_reg->tdr0[ hal_ll_tim_hw_specifics_map_local->config.channel ], tdr_slave );

    uint16_t mask_ts0 = HAL_LL_TIM_TS0_START_MASTER_CHANNEL |
                        ( 1 << hal_ll_tim_hw_specifics_map_local->config.channel );
    write_reg( &hal_ll_hw_reg->ts0, mask_ts0 );

    return HAL_LL_TIM_SUCCESS;
}

hal_ll_err_t hal_ll_tim_start( handle_t *handle ) {

    low_level_handle = hal_ll_tim_get_handle;
    hal_ll_tim_hw_specifics_map_local = hal_ll_get_specifics( hal_ll_tim_get_module_state_address );
    hal_ll_tim_base_handle_t *hal_ll_hw_reg = hal_ll_tim_get_base_struct( hal_ll_tim_hw_specifics_map_local->base );

    uint16_t ts0_start_timers = HAL_LL_TIM_TS0_START_MASTER_CHANNEL | (1u << hal_ll_tim_hw_specifics_map_local->config.channel );
    write_reg( &hal_ll_hw_reg->ts0, ts0_start_timers );

    return HAL_LL_TIM_SUCCESS;
}

hal_ll_err_t hal_ll_tim_stop( handle_t *handle ) {
    low_level_handle = hal_ll_tim_get_handle;
    hal_ll_tim_hw_specifics_map_local = hal_ll_get_specifics( hal_ll_tim_get_module_state_address );

    hal_ll_tim_base_handle_t *hal_ll_hw_reg = hal_ll_tim_get_base_struct( hal_ll_tim_hw_specifics_map_local->base );

    write_reg( &hal_ll_hw_reg->tt0, HAL_LL_TIM_TT0_STOP_MASTER_CHANNEL |
                                    1 << hal_ll_tim_hw_specifics_map_local->config.channel );
    clear_reg_bit( &hal_ll_hw_reg->toe0, hal_ll_tim_hw_specifics_map_local->config.channel ); // Disable timer output.

    return HAL_LL_TIM_SUCCESS;
}

void hal_ll_tim_close( handle_t *handle ) {

    low_level_handle = hal_ll_tim_get_handle;
    hal_ll_tim_hw_specifics_map_local = hal_ll_get_specifics(hal_ll_tim_get_module_state_address);

    if( low_level_handle->hal_ll_tim_handle != NULL ) {
        low_level_handle->hal_ll_tim_handle = NULL;
        low_level_handle->hal_drv_tim_handle = NULL;

        low_level_handle->init_ll_state = false;

        hal_ll_tim_hw_specifics_map_local->max_period = 0;
        hal_ll_tim_hw_specifics_map_local->freq_hz = 0;

        hal_ll_tim_module_enable( hal_ll_tim_hw_specifics_map_local, true );
        hal_ll_tim_alternate_functions_set_state( hal_ll_tim_hw_specifics_map_local, false );
        hal_ll_tim_module_enable( hal_ll_tim_hw_specifics_map_local, false );

        hal_ll_tim_hw_specifics_map_local->config.pin = HAL_LL_PIN_NC;
        hal_ll_tim_hw_specifics_map_local->config.channel = HAL_LL_PIN_NC;
        hal_ll_tim_hw_specifics_map_local->config.af = NULL;
    }
}

static hal_ll_pin_name_t hal_ll_tim_check_pin( hal_ll_pin_name_t pin, uint8_t *index,
                                                hal_ll_tim_handle_register_t *handle_map ) {
    hal_ll_pin_name_t pin_num;
    uint8_t index_counter = 0;
    uint8_t hal_ll_module_id = 0;
    uint16_t map_size = ( sizeof( hal_ll_tim_pin_map ) / sizeof( hal_ll_tim_pin_map_t ) );

    if ( HAL_LL_PIN_NC == pin ) {
        return HAL_LL_PIN_NC;
    }

    // Check if the selected pin is valid.
    for ( pin_num = 0; pin_num < map_size; pin_num++ ) {
        if ( hal_ll_tim_pin_map[ pin_num ].pin == pin ) {
            // Get module number
            hal_ll_module_id = hal_ll_tim_pin_map[ pin_num ].module_index;

            // Map module number to map index
            for ( uint8_t map_member = 0; map_member < TIM_MODULE_COUNT + 1; map_member++  ) {
                if ( hal_ll_tim_hw_specifics_map[map_member].module_index ==  hal_ll_module_id ) {
                    hal_ll_module_id = map_member;
                    break;
                }
            }

            if ( NULL == handle_map[hal_ll_module_id].hal_drv_tim_handle ) {
                *index = pin_num;
                return hal_ll_module_id;
            } else if ( TIM_MODULE_COUNT == ++index_counter ) {
                return --index_counter;
            }
        }
    }
    // By default return last error msg.
    if ( index_counter ) {
        return hal_ll_module_id;
    } else {
        return HAL_LL_PIN_NC;
    }
}

static void hal_ll_tim_alternate_functions_set_state( hal_ll_tim_hw_specifics_map_t *map, bool hal_ll_state ) {
    module_struct module;

    if( map->config.pin != HAL_LL_PIN_NC ) {
        module.pins[0] = VALUE( map->config.pin, map->config.af );
        module.pins[1] = GPIO_MODULE_STRUCT_END;

        module.configs[0] = HAL_LL_TIM_AF_CONFIG;
        module.configs[1] = GPIO_MODULE_STRUCT_END;

        hal_ll_gpio_module_struct_init( &module, hal_ll_state );
    }
}

static uint32_t hal_ll_tim_hw_init( hal_ll_tim_hw_specifics_map_t *map ) {
    hal_ll_tim_base_handle_t *hal_ll_hw_reg = hal_ll_tim_get_base_struct( map->base );

    uint32_t period = hal_ll_tim_set_freq_bare_metal( map );

    // Stop the operation of channels 0 and map->channel.
    uint8_t tt0_value = HAL_LL_TIM_TT0_STOP_MASTER_CHANNEL | (1u << map->config.channel );
    write_reg( &hal_ll_hw_reg->tt0, tt0_value );

    uint16_t tmr0_master_value = HAL_LL_TIM_TMR0_OPIRQ;
    write_reg( &hal_ll_hw_reg->tmr0[0], tmr0_master_value );

    uint16_t tmr0_slave_value = HAL_LL_TIM_TMR0_STS_INT |
                                HAL_LL_TIM_TMR0_MD_ONECOUNT |
                                HAL_LL_TIM_TMR0_OPIRQ;
    write_reg( &hal_ll_hw_reg->tmr0[ map->config.channel ], tmr0_slave_value );

    // Set channel as slave
    set_reg_bit( &hal_ll_hw_reg->tom0, map->config.channel );
    // Set channel 0 as master
    clear_reg_bit( &hal_ll_hw_reg->tom0, HAL_LL_TIM_TOM0_MASTER_CHANNEL );
    // Set positive logic output
    clear_reg_bit( &hal_ll_hw_reg->tol0, map->config.channel );
    // Set timer output value to be 0
    clear_reg_bit( &hal_ll_hw_reg->to0, map->config.channel );
    // Enable timer output
    set_reg_bit( &hal_ll_hw_reg->toe0, map->config.channel );

    return period;
}

static uint32_t hal_ll_tim_init( hal_ll_tim_hw_specifics_map_t *map ) {

    hal_ll_tim_module_enable( map, true );

    hal_ll_tim_alternate_functions_set_state( map, true );

    return hal_ll_tim_hw_init( map );
}
